src/main/java/com/example/warsztat_samochodowy/error/MechanicAlreadyExistException.java
package com.example.warsztat_samochodowy.error;

public class MechanicAlreadyExistException extends RuntimeException {
    public MechanicAlreadyExistException(String message) {
        super(message);
    }
}
